Update Util